librbd: Add convenience library to support unit tests
Unit tests need access to the private symbols of librbd no
longer exported from librbd.so.  A new librbd_internal
convenience library was created to allow access.

Signed-off-by: Jason Dillaman <dillaman@redhat.com>

--- a/src/librbd/Makefile.am
+++ b/src/librbd/Makefile.am
@@ -1,13 +1,20 @@
-librbd_la_SOURCES = \
-	librbd/librbd.cc \
+librbd_internal_la_SOURCES = \
 	librbd/AioCompletion.cc \
 	librbd/AioRequest.cc \
 	librbd/ImageCtx.cc \
 	librbd/ImageWatcher.cc \
 	librbd/internal.cc \
 	librbd/LibrbdWriteback.cc
+noinst_LTLIBRARIES += librbd_internal.la
+
+librbd_api_la_SOURCES = \
+	librbd/librbd.cc
+noinst_LTLIBRARIES += librbd_api.la
+
+librbd_la_SOURCES = \
+	librbd/librbd.cc
 librbd_la_LIBADD = \
-	$(LIBRADOS) $(LIBOSDC) \
+	librbd_internal.la $(LIBRADOS) $(LIBOSDC) \
 	libcls_rbd_client.la libcls_lock_client.la \
 	$(PTHREAD_LIBS) $(EXTRALIBS)
 
